--- a/jay.html
+++ b/jay.html
@@ -13,7 +13,7 @@
         <H1>silveroak</H1>
             <nav class="site-nav">
                 <ul>
-                    <li><a href="#">shop</a></li>
+                    <li><a href="#">house</a></li>
                     <li><a href="#">visit</a></li>
                     <li><a href="#">explore</a></li>
                     <li><a href="#">Food</a></li>
